--- a/src/docs/userguide/projectTaskApi.tex
+++ b/src/docs/userguide/projectTaskApi.tex
@@ -20,7 +20,7 @@ Many of the methods of the project object return task objects. We have already s
 % section task_api (end)
 \section{Summary} % (fold)
 \label{sec:summary}
-The project and the task API constitute the core layer of Gradle and provide all the possible interaction options with this layer.\footnote{There is more to come for this layer in the other chapters, e.g. support for multi-project builds (see chapter \ref{cha:multi_project_builds}).} This core-layer constitutes a language for dependency based programming. There are many other projects providing such a language. There is Ant for Java, Rake and Rant for Ruby, SCons for Python, the good old Make and many more.\footnote{Interestingly, Maven2 is the only major build system which does not use dependency based programming.} We think that one thing that makes Gradle special compared to the other tools, is its strong support for applying dependency based programming on \texttt{multiproject} builds. We also think that just Gradles core layer (together with its integration of the Ant tasks), provides a more convenient build system than Ant's core layer.
+The project and the task API constitute the core layer of Gradle and provide all the possible interaction options with this layer.\footnote{There is more to come for this layer in the other chapters, e.g. support for multi-project builds (see chapter \ref{cha:multi_project_builds}).} This core-layer constitutes a language for dependency based programming.\footnote{Martin Fowler has written about this: \url{http://martinfowler.com/articles/rake.html\#DependencyBasedProgramming}} There are many other projects providing such a language. There is Ant for Java, Rake and Rant for Ruby, SCons for Python, the good old Make and many more.\footnote{Interestingly, Maven2 is the only major build system which does not use dependency based programming.} We think that one thing that makes Gradle special compared to the other tools, is its strong support for applying dependency based programming on \texttt{multiproject} builds. We also think that just Gradles core layer (together with its integration of the Ant tasks), provides a more convenient build system than Ant's core layer.
 % section summary (end)
 
 % chapter the_project_and_task_api (end)
